--- a/index.html
+++ b/index.html
@@ -1,12 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-School</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E-School</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
+  <div class="container">
+
+    <nav class="navbar navbar-expand-lg navbar">
+      <a class="navbar-brand" href="#">E-School</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="Books">Books<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Courses">Courses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Others">Others</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Blogs">Blogs</a>
+          </li>
+          <li class="nav-item">
+            <button class="Sign-In-Button">Sign In</button>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+
+    <div class="row margin">
+      <div class="col-md-3 d-flex align-items-center">
+        <span class="align-middle">
+          <p> Are you ready to learn? </p>
+          <h1 class="Highlights"> Learn with fun on <span>any shedule </span></h1>
+          <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde magni quasi veritatis molestiae enim
+            dolorem
+            earum.</h6>
+          <br>
+          <button class="Submit-Button"> Submit </button>
+        </span>
+
+   
+      </div>
+
+      <div class="col-md-3">
+        <img src="e-school-resources-master/Photos/Illustration.png" alt="..." p>
+
+
+      </div>
+    </div>
+  </div>
+
+  <div class="card-deck">
+
+      <div class="col-md-3">
+        <div class="card">
+          <img src="e-school-resources-master/ICON/book.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">1500+ Topic</h6>
+            <p class="card-text">Learn Anything</p>
+
+          </div>
+        </div>
+      </div>
     
+
+      <div class="col-md-3">
+        <div class="card bg-white">
+          <img src="e-school-resources-master/ICON/Student.png" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h6 class="card-title">1800+ Students</h6>
+          <p class="card-text">Learn Anything</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="col-md-3">
+      <div class="card">
+        <img src="e-school-resources-master/ICON/Test.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h6 class="card-title">9k+ Test Token</h6>
+          <p class="card-text">Learn Anything</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="card">
+        <img src="e-school-resources-master/ICON/Students.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h6 class="card-title">2000+ Student</h6>
+          <p class="card-text">Learn Anything</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+<section>
+
+  
+  <div>
+    <h5>Online </h5>
+  </div>
+</section>
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
